<resources>

    <string name="enter_bin">Enter BIN</string>
    <string name="learn">Learn!</string>
    <string name="history_icon_description">The history icon is depicted here \n you need to click on it to see the hint</string>
    <string name="enter_something">Please, enter something your BIN;) </string>
    <string name="history_text">Request history</string>
    <string name="history_empty">Your history is empty ;)</string>
    <string name="empty_text" translatable="false" />


    <!-- Errors texts -->
    <string name="query_empty">You don\'t entered your BIN ;)</string>
    <string name="no_internet">No network connection!</string>
    <string name="server_error">Server error</string>
    <string name="client_error">Not enough data to search :(</string>
    <string name="unknown_error">Unknown error, sorry :(</string>
    <string name="not_found">Result not found</string>
    <string name="data_base_error">Data base error!</string>


    <!-- Titles -->
    <string name="home">Home</string>
    <string name="history">History</string>

    <!-- Data field -->
    <string name="true_value">Yes</string>
    <string name="false_value">No</string>
    <string name="coordinate">(latitude: %1$s , longitude: %2$s)</string>
    <string name="bank_name_city" translatable="false">%1$s, %2$s</string>
    <string name="boolean_data" translatable="false">%1$s/%2$s</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>

    <!-- data headers -->
    <string name="scheme">scheme/network</string>
    <string name="brand">brand</string>
    <string name="type">type</string>
    <string name="card_number">card number</string>
    <string name="length">length</string>
    <string name="luhn">luhn</string>
    <string name="prepaid">prepaid</string>
    <string name="country">country</string>
    <string name="bank">bank</string>

    <!-- Edit Text-->
    <string name="template" translatable="false">"XXXX XXXX"</string>
    <string name="try_again">Try again</string>
    <string name="clear_icon_description">The clear icon is depicted here</string>
    <string name="app_name" translatable="false">BIN</string>

    <string name="unknown_brand">unknown brand</string>
    <string name="unknown_bank">unknown bank</string>
    <string name="unknown_city">unknown city</string>
    <string name="unknown_number">unknown number</string>
    <string name="unknown_country">unknown country</string>
    <string name="unknown_length">unknown length</string>
    <string name="unknown_type">unknown type</string>
    <string name="unknown_luhn">unknown luhn</string>
    <string name="unknown_link">no link</string>
    <string name="unknown_latitude">unknown latitude</string>
    <string name="unknown_longitude">unknown longitude</string>
</resources>