<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.MainFragment">

    <FrameLayout
        android:id="@+id/text_bin_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/binText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/standard_height"
            android:ems="@integer/size_bin"
            android:selectAllOnFocus="true"
            android:background="@drawable/bin_background"
            android:drawablePadding="@dimen/padding_8"
            android:fontFamily="@font/nunito_medium"
            android:gravity="center"
            android:hint="@string/enter_bin"
            android:textColorHint="@color/gray_400"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24"
            android:layout_marginTop="@dimen/main_vertical_margin"
            android:autofillHints=""
            android:inputType="textNoSuggestions|number"/>
        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clear"
            android:layout_gravity="center_vertical|end"
            android:paddingTop="@dimen/padding_16"
            android:paddingEnd="@dimen/padding_16"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/clear_icon_description">
        </ImageView>

    </FrameLayout>

    <TextView
        android:id="@+id/request_button"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:background="@drawable/button_state"
        android:gravity="center"
        android:text="@string/learn"
        android:textColor="@color/orange_700"
        android:textSize="@dimen/text_size_32"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/main_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_bin_layout" />

    <TextView
        android:id="@+id/input_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/main_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/request_button"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/history_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/history_icon_description"
        android:src="@drawable/book"
        android:layout_marginTop="@dimen/main_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_error_text" />

    <TextView
        android:id="@+id/history_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_vertical_margin"
        android:text="@string/history_text"
        android:textColor="@color/orange_700"
        android:layout_marginTop="@dimen/padding_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_icon" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bin_data_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_zero"
        android:background="@drawable/bin_background"
        android:layout_marginVertical="@dimen/main_vertical_margin"
        android:layout_marginHorizontal="@dimen/main_horizontal_margin"
        android:paddingVertical="@dimen/main_vertical_margin"
        android:paddingHorizontal="@dimen/main_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_text" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/orange_700"
        app:layout_constraintBottom_toBottomOf="@+id/bin_data_list"
        app:layout_constraintEnd_toEndOf="@+id/bin_data_list"
        app:layout_constraintStart_toStartOf="@+id/bin_data_list"
        app:layout_constraintTop_toTopOf="@+id/bin_data_list" />

    <TextView
        android:id="@+id/try_again"
        android:layout_width="@dimen/try_again_width"
        android:layout_height="@dimen/standard_height"
        android:background="@drawable/button_state"
        android:gravity="center"
        android:text="@string/try_again"
        android:textColor="@color/red_700"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toTopOf="@+id/text_error"
        app:layout_constraintEnd_toEndOf="@+id/bin_data_list"
        app:layout_constraintStart_toStartOf="@+id/bin_data_list"
        android:layout_marginBottom="@dimen/padding_16"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>